--- a/app/src/main/res/layout/quote_credit_save_variable.xml
+++ b/app/src/main/res/layout/quote_credit_save_variable.xml
@@ -19,7 +19,7 @@
             android:id="@+id/textView15"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/quote_credit_save"
+            android:text="@string/quote_credit_save_variable"
             android:textAlignment="center"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -105,6 +105,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/months_number_hint"
+                android:textAlignment="textEnd" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textView21"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/capital_value" />
+
+            <TextView
+                android:id="@+id/tvCapitalValueSave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/quote_credit_hint"
+                android:textAlignment="textEnd" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textView17"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/interest_value" />
+
+            <TextView
+                android:id="@+id/tvInterestValueSaveVariable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/interest_value_hint"
                 android:textAlignment="textEnd" />
         </TableRow>
 
