se agrega la nueva pagina para ver los registros guardados

--- a/app/src/main/res/layout/fragment_list_bought.xml
+++ b/app/src/main/res/layout/fragment_list_bought.xml
@@ -90,10 +90,22 @@
                     android:textAlignment="textEnd" />
             </LinearLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/list_bought"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/list_bought"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
+            </ScrollView>
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
