--- a/app/src/main/res/layout/quote_credit_save_item_list.xml
+++ b/app/src/main/res/layout/quote_credit_save_item_list.xml
@@ -123,7 +123,7 @@
             android:textStyle="italic" />
 
         <TextView
-            android:id="@+id/textView28"
+            android:id="@+id/lbStatusICC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
