--- a/app/src/main/res/layout/bought_item_list.xml
+++ b/app/src/main/res/layout/bought_item_list.xml
@@ -35,7 +35,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvBoughtName"
+            android:id="@+id/tvMonthItemTCC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -45,7 +45,7 @@
             android:textStyle="bold" />
 
         <ImageButton
-            android:id="@+id/btnBoughtDelete"
+            android:id="@+id/btnDeleteItemTCC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
@@ -71,7 +71,7 @@
         tools:layout_editor_absoluteX="1dp">
 
         <TextView
-            android:id="@+id/lbCreditValueBought"
+            android:id="@+id/lbCutOffDayICC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -97,7 +97,7 @@
         tools:layout_editor_absoluteX="1dp">
 
         <TextView
-            android:id="@+id/lbQuotesBought"
+            android:id="@+id/lbCutOffDayItemCC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -105,7 +105,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvQuotesBought"
+            android:id="@+id/tvCutOffDayICC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
@@ -115,7 +115,7 @@
             android:textStyle="italic" />
 
         <TextView
-            android:id="@+id/textView28"
+            android:id="@+id/lbStatusICC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -123,7 +123,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvMonthBought"
+            android:id="@+id/tvStatusICC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -141,7 +141,7 @@
         tools:layout_editor_absoluteX="5dp">
 
         <TextView
-            android:id="@+id/lbCapitalBought"
+            android:id="@+id/lbWarningICC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -149,7 +149,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvCapitalBought"
+            android:id="@+id/tvWarningICC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
