se agrega la nueva pagina para ver los registros guardados
Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout/bought_item_list.xml
+++ b/app/src/main/res/layout/bought_item_list.xml
@@ -7,7 +7,7 @@
     android:layout_marginLeft="5dp"
     android:layout_marginTop="5dp"
     android:layout_marginRight="5dp"
-    android:background="#03A9F4"
+    android:background="@color/green_background"
     android:orientation="vertical"
     android:paddingLeft="5dp"
     android:paddingTop="5dp"
@@ -28,6 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:textColor="@android:color/primary_text_dark"
             android:layout_weight="1"
             android:text="@string/date_hint"
             android:textAlignment="viewStart"
@@ -40,6 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/product_name"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -75,6 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/product_value"
             android:textStyle="bold" />
 
@@ -83,6 +86,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/money_hint"
             android:textAlignment="textEnd"
             android:textStyle="italic" />
@@ -101,6 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/quote_bought"
             android:textStyle="bold" />
 
@@ -110,6 +115,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/months_number_hint"
             android:textAlignment="textEnd"
             android:textStyle="italic" />
@@ -119,6 +125,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/months"
             android:textStyle="bold" />
 
@@ -127,6 +134,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/months_number_hint"
             android:textAlignment="textEnd"
             android:textStyle="italic" />
@@ -145,6 +153,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/pending_to_pay"
             android:textStyle="bold" />
 
@@ -153,6 +162,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/money_hint"
             android:textAlignment="textEnd" />
     </LinearLayout>
@@ -171,6 +181,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/tax"
             android:textStyle="bold" />
 
@@ -179,6 +190,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/interest_value_hint"
             android:textAlignment="textEnd" />
     </LinearLayout>
@@ -196,6 +208,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/capital_value"
             android:textStyle="bold" />
 
@@ -204,6 +217,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/money_hint"
             android:textAlignment="textEnd" />
     </LinearLayout>
@@ -221,6 +235,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/interest_value"
             android:textStyle="bold" />
 
@@ -229,6 +244,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/money_hint"
             android:textAlignment="textEnd" />
     </LinearLayout>
@@ -246,6 +262,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/quote_credit"
             android:textStyle="bold" />
 
@@ -254,6 +271,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_dark"
             android:text="@string/quote_credit_hint"
             android:textAlignment="textEnd"
             android:textStyle="italic" />
