--- a/app/src/main/res/menu/setting_menu.xml
+++ b/app/src/main/res/menu/setting_menu.xml
@@ -19,5 +19,12 @@
         android:title="@string/taxes_credit_card"
         android:visible="true" />
 
+    <item
+    android:id="@+id/item_menu_setting_about_it"
+    android:enabled="true"
+    android:icon="@drawable/ic_credit_card_foreground"
+    android:title="@string/about_it"
+    android:visible="true" />
+
 
 </menu>
