--- a/app/src/main/res/layout/buys_credit_card.xml
+++ b/app/src/main/res/layout/buys_credit_card.xml
@@ -233,6 +233,28 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/llRecurrentQuoteValue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutQuoteValue">
+
+        <TextView
+            android:id="@+id/lbRecurrentQuoteValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="10dp"
+            android:text="@string/recurrent" />
+
+        <CheckBox
+            android:id="@+id/cbRecurrent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
