--- a/app/src/main/res/layout/header_side.xml
+++ b/app/src/main/res/layout/header_side.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3F51B5"
+    android:background="#5DBC61"
     android:orientation="vertical"
     android:paddingLeft="10dp"
     android:paddingTop="10dp"
@@ -13,9 +13,8 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:drawableLeft="@mipmap/ic_file_round"
+        android:drawableLeft="@drawable/finanza_logo"
         android:gravity="center"
-        android:text="@string/app_name"
         android:textAlignment="center"
         android:textColor="#FBF8F8"
         android:textSize="34sp"
