--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -7,8 +7,8 @@
         <item name="colorOnPrimary">@color/black</item>
         <item name="android:textColorPrimary">@color/green_background</item>
         <!-- Secondary brand color. -->
-        <item name="android:textColor">@color/white</item>
-        <item name="android:editTextBackground">@null</item>
+        <!--<item name="android:textColor">@color/white</item>-->
+        <!--<item name="android:editTextBackground">@null</item>-->
         <item name="android:textColorHint">@color/green_background_dark </item>
         <item name="android:colorBackground">@color/black</item>
         <item name="android:colorControlActivated">@color/green_background</item>
